--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "zod": "^3.24.2",
     "shiki": "^1.10.3",
     "react-tweet": "^3.2.1",
-    "vaul": "^0.9.1"
+    "vaul": "^0.9.1",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -72,6 +73,7 @@
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/node-fetch": "^2.6.11"
   }
 }
