--- a/package.json
+++ b/package.json
@@ -41,39 +41,48 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.4",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
-    "framer-motion": "^11.5.1",
+    "framer-motion": "^11.18.2",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
+    "motion": "^12.23.12",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
+    "node-fetch": "^3.3.2",
     "patch-package": "^8.0.0",
+    "prismjs": "^1.29.0",
+    "radix-ui": "^1.4.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-tweet": "^3.2.2",
+    "react-use-measure": "^2.1.7",
     "recharts": "^2.15.1",
+    "rough-notation": "^0.5.1",
+    "shiki": "^1.29.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
-    "shiki": "^1.10.3",
-    "react-tweet": "^3.2.1",
     "vaul": "^0.9.1",
-    "node-fetch": "^3.3.2"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.11",
+    "@types/prismjs": "^1.26.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@types/node-fetch": "^2.6.11"
+    "typescript": "^5"
   }
 }
